fixed overflow, changed text colors and header sizing to be mobile friendly

--- a/styles/pages/Apod.module.scss
+++ b/styles/pages/Apod.module.scss
@@ -5,9 +5,11 @@
 .container {
   @include mixins.flex(column, space-between, center);
   background-color: colors.$dark;
+  color: colors.$bright;
 }
 
 .title {
-  @include mixins.font(fonts.$roboto, 4rem);
+  @include mixins.font(fonts.$roboto, clamp(2.5rem, 7vw, 7rem));
+  text-align: center;
   color: colors.$bright;
 }
